Add you-are-here markers to secondary navigation site-wide.
This is especially necessary now that some sections of the site are
starting to have pages beneath a secondary (sidebar) navigation item.
These situations are arising in PlantShare, but the markers are
helpful overall such as in the About section. (#292)

--- a/gobotany/plantshare/templates/_plantshare_minimal_navigation.html
+++ b/gobotany/plantshare/templates/_plantshare_minimal_navigation.html
@@ -1,6 +1,3 @@
-{% load gobotany_tags %}
 <div class="box">
-    <div class="section">
-        <h4>{% nav_item 'PlantShare' ps-main %}</h4>
-    </div>
+    {% include "_plantshare_home_nav_item.html" %}
 </div>
