--- a/gobotany/static/css/site.css
+++ b/gobotany/static/css/site.css
@@ -317,7 +317,8 @@ p.new { background: #fff; display: inline-block; font-size: 9px; font-weight: no
 p.meta { font-size: 10px; font-style: italic; margin: 4px 0; }
 p.meta + p { margin-top: 2px; }
 
-/* Header */
+/* Navigation highlighting */
+/* Global navigation (header) */
 body#home nav li.home { background: url(/static/images/layout/active-nav-home.png) bottom center no-repeat transparent; text-decoration: none; }
 body.simple nav li.simple { background: url(/static/images/layout/active-nav-app.png) bottom center no-repeat; text-decoration: none; }
 body.plantshare nav li.plantshare { background: url(/static/images/layout/active-nav-app.png) bottom center no-repeat; text-decoration: none; }
@@ -326,6 +327,12 @@ body.dkey nav li.dkey { background: url(/static/images/layout/active-nav-app.png
 body.teaching nav li.teaching { background: url(/static/images/layout/active-nav-app.png) bottom center no-repeat; text-decoration: none; }
 body.about nav li.about { background: url(/static/images/layout/active-nav-app.png) bottom center no-repeat; text-decoration: none; }
 
+/* Section navigation (sidebar, only in some sections) */
+body { /* Place "you are here" marker next to a non-linked item. This is the top level of each sub-section. */ /* Handle pages beneath subsections. */ /* TODO .plantshare.sighting h4 a[text='Sightings']::before or something? */ }
+body.about #sidebar h4 a:not([href])::before, body.plantshare #sidebar h4 a:not([href])::before { color: #000; content: "\25b8"; margin-left: -15px; padding-right: 7px; }
+body.plantshare#sighting #sidebar .sightings a::before { color: #000; content: "\25b8"; margin-left: -15px; padding-right: 7px; }
+
+/* Header */
 header { height: 120px; }
 header .container { margin: 0 auto; padding: 0 10px; width: 960px; }
 header p { margin: 0; }
@@ -367,7 +374,9 @@ header nav #search-suggest .menu span { font-weight: normal; }
 .content #sidebar .section.plant-map { background: url(/static/images/layout/plant-map.png) 95% 1% no-repeat; padding: 0 25px 16px 16px; }
 .content #sidebar .section .left { float: left; }
 .content #sidebar .section p { margin: 0; }
+.content #sidebar a { display: inline-block; margin-left: 10px; }
 .content #sidebar a:hover { text-decoration: none; }
+.content #sidebar a.video { margin-left: 0; }
 .content #sidebar a.get-help-btn { background: url(/static/images/layout/get-help-btn-orange.png) 0 0 no-repeat transparent; display: block; height: 32px; margin: 10px 0 20px; text-indent: -9000px; width: 104px; }
 .content #sidebar a.get-help-btn:hover { background-position: 0 -32px; }
 .content #sidebar a.get-help-btn:active { background-position: 0 -64px; }
