--- a/gobotany/static/sass/_simplekey.scss
+++ b/gobotany/static/sass/_simplekey.scss
@@ -507,6 +507,7 @@ body.skey {
                 }
                 .option {
                     color: #1a2e11;
+                    margin-left: 0;
                     text-decoration: none;
                     span.name {
                         display: block;
