Show the Sign Up navigation item on the Sign Up form.
Now that there are left-navigation markers, the Sign Up form needed the
you-are-here treatment more than before. (#292)

--- a/gobotany/plantshare/templates/registration/registration_form.html
+++ b/gobotany/plantshare/templates/registration/registration_form.html
@@ -28,6 +28,6 @@ with a link to activate your account.</p>
 {% endblock %}
 
 {% block sidebar_content %}
-    {% include "_plantshare_minimal_navigation.html" %}
+    {% include "_plantshare_minimal_navigation.html" with show_signup_item="true" %}
 {% endblock %}
 
