--- a/gobotany/plantshare/templates/_plantshare_minimal_navigation.html
+++ b/gobotany/plantshare/templates/_plantshare_minimal_navigation.html
@@ -1,3 +1,6 @@
 <div class="box">
     {% include "_plantshare_home_nav_item.html" %}
+    {% if show_signup_item %}
+        {% include "_signup_nav_item.html" %}
+    {% endif %}
 </div>
