--- a/gobotany/plantshare/templates/_plantshare_navigation.html
+++ b/gobotany/plantshare/templates/_plantshare_navigation.html
@@ -23,9 +23,7 @@
     </div>
     {% endif %}
     {% else %}
-    <div class="section signup">
-        <h4>{% nav_item 'Sign Up for PlantShare' registration_register %}</h4>
-    </div>
+        {% include "_signup_nav_item.html" %}
     {% endif %}
 </div>
 
