--- a/gobotany/taxa/templates/gobotany/_info_from_flora.html
+++ b/gobotany/taxa/templates/gobotany/_info_from_flora.html
@@ -1,5 +1,7 @@
 {% load dkey_filters %}
+  {% if dkey_page %}
     <h2 id="dkey">Information from Dichotomous Key of Flora Novae Angliae</h2>
     <div>
       {{ dkey_page.text|discard_floating_figures|render_figure_links|safe }}
     </div>
+  {% endif %}
