Fix bug on the preview popup where the species page button was gone. (#291)

--- a/gobotany/static/sass/_simplekey.scss
+++ b/gobotany/static/sass/_simplekey.scss
@@ -250,7 +250,7 @@ body.skey {
                         background-position: 0 -64px;
                     }
                 }
-                .go-to-species-page {
+                &.go-to-species-page {
                     background: url(/static/images/layout/go-to-species-page.png) 0 0 no-repeat transparent;
                     height: 31px;
                     margin: 20px 0 0 0;
