--- a/gobotany/static/sass/_jquery.jscrollpane.scss
+++ b/gobotany/static/sass/_jquery.jscrollpane.scss
@@ -103,10 +103,10 @@
 	outline: none;
 }
 .jspArrowUp {
-	background: url(../images/icons/arrow-up.jpg) no-repeat 0 0;	
+	background: url(/static/images/icons/arrow-up.jpg) no-repeat 0 0;	
 }
 .jspArrowDown {
-	background: url(../images/icons/arrow-down.jpg) no-repeat left bottom;	
+	background: url(/static/images/icons/arrow-down.jpg) no-repeat left bottom;	
 }
 .jspCorner
 {
