--- a/gobotany/static/sass/site.scss
+++ b/gobotany/static/sass/site.scss
@@ -500,8 +500,10 @@ header {
             }
         }
         a {
-            display: inline-block;
-            margin-left: 10px;
+            &:not(.jspArrow) {
+                display: inline-block;
+                margin-left: 10px;
+            }
             &:hover {
                 text-decoration: none;
             }
