--- a/gobotany/static/sass/_plantshare.scss
+++ b/gobotany/static/sass/_plantshare.scss
@@ -291,6 +291,60 @@ body.plantshare {
                 }
             }                
         }
+        .modal-container {
+            position: relative;
+
+            .image-modal {
+                background-color: white;
+                border: 5px solid #ACAC90;
+                display: none;
+                padding: 15px;
+                position: absolute;
+                width: 400px;
+                height: 120px;
+                top: 35px;
+                left: 20px;
+                z-index: 10;
+
+                img {
+                    float: left;
+                    margin: 0 20px 10px 0;
+                }
+
+                a.close {
+                    background: transparent url(/static/images/icons/close.png) no-repeat;
+                    display: block;
+                    height: 16px;
+                    position: absolute;
+                    top: 15px;
+                    right: 15px;
+                    width: 16px;
+                    text-indent: -9999px;
+                }
+
+                h4 {
+                    margin: 0 0 15px;
+                    font-size: 18px;
+                }
+
+                form {
+                    float: right;
+                    margin: 15px 0;
+                    width: 290px;
+                }
+                
+                input {
+                    border: 0 none !important;
+                    box-shadow: inset 0 0 0 white !important;
+                }
+
+                input#id_image {
+                    clear: both;
+                    display: block;
+                    margin: 0 0 10px;
+                }
+            }
+        }
     }
     &#profile {
         div.section-container {
